--- a/templates/login.html
+++ b/templates/login.html
@@ -30,9 +30,9 @@
             display: flex;
             flex-direction: column;
             gap: 20px;
-            width: 400px;
+            width: 350px;
             max-width: 90%;
-            height: 500px;
+            height: 450px;
             background-color: rgba(252, 254, 255, 0.432);
             border-radius: 20px;
             border: solid 2px white;
@@ -96,8 +96,8 @@
 
     <div class="overlay">
         <div class="frm">
-            <img src="assets/logo.png" alt="" id="logo">
-            <img src="assets/icons/user_default.png" alt="">
+<!--            <img src="assets/logo.png" alt="" id="logo"> -->
+            <img src="assets/icons/museu.png" alt="">
             <div class="frm-input">
                 <span class="mdi mdi-account"></span>
                 <input type="text" id="edtUser" placeholder="Email" onkeyup="validaEmail(this)">
@@ -108,7 +108,7 @@
                 <span id="btnEye" class="mdi mdi-eye-off-outline"></span>
             </div>
             <button id="btnLogin">Login</button>
-            <p>Siflex 3.0</p>
+            <p>Gerenciador de Museu 1.0</p>
         </div>
     </div>
 
