--- a/templates/usr_viewUser.html
+++ b/templates/usr_viewUser.html
@@ -45,6 +45,9 @@
             <div class="inline">
                 <label for="edtPass">Senha:</label>
                 <input type="password" id="edtPass" placeholder="Senha" value="">
+            </div>
+            <div class="inline">
+                <label for="edtRepass">Repita Senha:</label>
                 <input type="password" id="edtRepass" placeholder="Repita a senha" value="" maxlength="12">
             </div>
         </div>
