--- a/templates/adm_view_museu.html
+++ b/templates/adm_view_museu.html
@@ -22,9 +22,9 @@
         </div>
         <div class="inline">
             <label for="edtLat">Latitude</label>
-            <input type="text" class="only-view" id="edtLat" maxlength="10" onkeyup="valFloat(this,6)" disabled>
+            <input type="text" class="only-view" id="edtLat" maxlength="10" onfocus="this.select();" onkeyup="valFloat(this,6)" disabled>
             <label for="edtLon">Longitude</label>
-            <input type="text" class="only-view" id="edtLon" maxlength="10" onkeyup="valFloat(this,6)" disabled>
+            <input type="text" class="only-view" id="edtLon" maxlength="10" onfocus="this.select();" onkeyup="valFloat(this,6)" disabled>
         </div>
         <div class="inline">
             <label for="edtEnd">Endereço</label>
