--- a/templates/login.html
+++ b/templates/login.html
@@ -113,7 +113,7 @@
                 <span id="btnEye" class="mdi mdi-eye-off-outline"></span>
             </div>
             <button id="btnLogin">Login</button>
-            <p>Gerenciador de Museu 1.0</p>
+            <p>Gerenciador de Acervos 1.0</p>
         </div>
     </div>
 
