--- a/templates/busca_acervo.html
+++ b/templates/busca_acervo.html
@@ -65,9 +65,7 @@
                 data != undefined ?  main_data[pageData.org].func.buscaAcervo(data) : null               
             }
             closeModal('busca_acervo')
-       }catch{
-
-        }
+       }catch{null}
         
     })
 
