--- a/templates/adm_view_acervo.html
+++ b/templates/adm_view_acervo.html
@@ -85,7 +85,7 @@
         </div>
         <div class="inline">
             <label for="edtObs">Obs:</label>
-            <textarea id="edtObs" rows="5"></textarea>
+            <textarea id="edtObs" class="only-view" rows="5" disabled></textarea>
         </div>
 
         <div class="line">
